atualização do codigo

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <section>
         <div class="chamada-texto">
             <h1>INICIAÇÃO TEATRAL - Aula 01 - "A Origem do Teatro e Introdução a Prática Cênica"</h1>
-            <p>#Biologia</p>
+            <p>#artes</p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hTBEGO8dbRw?si=1zp6cVFy8wdGFd7q&quot;
+            <iframe width="560" height="315" src="https://youtu.be/Jg7BmuL9QTM?si=uWkib9rReK0FXKAY;
             title=" YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
