atualização do codigo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <p>#artes</p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/Jg7BmuL9QTM?si=uWkib9rReK0FXKAY;
-            title=" YouTube video player" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Jg7BmuL9QTM?si=uWkib9rReK0FXKAY"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
