adicionei novos videos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>AULAS DE ARTES</header>
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>INICIAÇÃO TEATRAL - Aula 01 - "A Origem do Teatro e Introdução a Prática Cênica"</h1>
             <p>#artes</p>
@@ -24,6 +24,21 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    <section class="categoria">
+        <h2>Outras sugestões de videos</h2>
+        <div class="categoria-videos">
+            
+            <a href="https://www.youtube.com/watch?v=WF2wYeARIlM">
+                <img src="https://img.youtube.com/vi/WF2wYeARIlM/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=8OFtO0SOTi8">
+                <img src="https://img.youtube.com/vi/8OFtO0SOTi8/maxresdefault.jpg"/>
+            </a>
+             <a href="https://www.youtube.com/watch?v=Pf2u-yWv4rU">
+                <img src="https://img.youtube.com/vi/Pf2u-yWv4rU/maxresdefault.jpg"/>
+            </a>
+        </div>
+    </section>
 </body>
 
-</html>
+</html>                                                                                                                                                                                                                                                                                                                    
